adjusted api doc
