# doc/api.yaml
@@ -130,7 +130,7 @@ paths:
                     
   /photos/{pid}:
     parameters:
-      - $ref: "#/components/parameters/photo_id"
+      - $ref: "#/components/parameters/pid"
     get:
       tags: ["Photos"]
       operationId: getPhoto
@@ -164,7 +164,7 @@ paths:
       
   /photos/{pid}/likes:
       parameters:
-        - $ref: "#/components/parameters/photo_id"
+        - $ref: "#/components/parameters/pid"
       get:
         tags: ["Likes"]
         operationId: getLikes
@@ -194,8 +194,8 @@ paths:
   
   /photos/{pid}/likes/{uid}:
     parameters:
-      - $ref: "#/components/parameters/photo_id"
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/pid"
+      - $ref: "#/components/parameters/uid"
     put:
       tags: ["Likes"]
       operationId: likePhoto
@@ -229,7 +229,7 @@ paths:
          
   /photos/{pid}/comments:
     parameters:
-      - $ref: "#/components/parameters/photo_id"
+      - $ref: "#/components/parameters/pid"
     get:
       tags: ["Comments"]
       operationId: getComments
@@ -259,8 +259,8 @@ paths:
   
   /photos/{pid}/comments/{uid}:
     parameters:
-      - $ref: "#/components/parameters/photo_id"
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/pid"
+      - $ref: "#/components/parameters/uid"
     post:
       tags: ["Comments"]
       operationId: commentPhoto
@@ -332,7 +332,7 @@ paths:
     
   /users/{uid}/profile:
     parameters:
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/uid"
     get:
       operationId: getUserProfile
       tags: ["Users"]
@@ -351,7 +351,7 @@ paths:
 
   /users/{uid}/username:
     parameters:
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/uid"
     put:
       tags: ["Users"]
       operationId: setMyUserName
@@ -380,7 +380,7 @@ paths:
   
   /users/{uid}/follow:
     parameters:
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/uid"
     get:
       operationId: getFollowedUsers
       tags: ["Follows"]
@@ -410,8 +410,8 @@ paths:
   
   /users/{uid}/follow/{fid}:
     parameters:
-      - $ref: "#/components/parameters/user_id"
-      - $ref: "#/components/parameters/follow_id"
+      - $ref: "#/components/parameters/uid"
+      - $ref: "#/components/parameters/fid"
     put:
       operationId: followUser
       tags: ["Follows"]
@@ -445,7 +445,7 @@ paths:
   
   /users/{uid}/ban:
     parameters:
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/uid"
     get:
       operationId: getBannedUsers
       tags: ["Bans"]
@@ -475,8 +475,8 @@ paths:
 
   /users/{uid}/ban/{bid}:
     parameters:
-      - $ref: "#/components/parameters/user_id"
-      - $ref: "#/components/parameters/banned_id"  
+      - $ref: "#/components/parameters/uid"
+      - $ref: "#/components/parameters/bid"  
     put:
       operationId: banUser
       tags: ["Bans"]
@@ -510,7 +510,7 @@ paths:
   
   /users/{uid}/stream:
     parameters:
-      - $ref: "#/components/parameters/user_id"
+      - $ref: "#/components/parameters/uid"
     get:
       operationId: getMyStream
       tags: ["Users"]
@@ -694,7 +694,7 @@ components:
       scheme: bearer
       
   parameters:
-    photo_id:
+    pid:
         description: The photo's identifier
         schema:
           type: string
@@ -706,7 +706,7 @@ components:
         required: true
         allowEmptyValue: false
 
-    user_id:
+    uid:
       description: The user's identifier
       schema:
         type: string
@@ -718,7 +718,7 @@ components:
       required: true
       allowEmptyValue: false
 
-    banned_id:
+    bid:
       description: The user's identifier
       schema:
         type: string
@@ -730,7 +730,7 @@ components:
       required: true
       allowEmptyValue: false
     
-    follow_id:
+    fid:
       description: The user's identifier
       schema:
         type: string
